Archive2/8a/60e35e7e34617c/output
main.cpp: In member function 'void D::bar(test<int, double>&)':
main.cpp:1:35: error: 'int test_base::i' is protected
 struct test_base { protected: int i ; } ;
                                   ^
main.cpp:27:25: error: within this context
         test_int_double.i = -9999 ; // *** error: base::i is protected,
                         ^
